// ------------------------------------------------------------------------------
// MODULE 5: gRPC Contract (IDL). Define service and messages first; code is generated.
// Binary-efficient, strong typing, HTTP/2. Used for high-throughput internal calls
// (e.g. telecom AMFâ€“SMF, 10k req/s). See Notes: "We don't write Java classes first."
// ------------------------------------------------------------------------------
syntax = "proto3";

option java_package = "com.telecom.ordergrpc.grpc";
option java_outer_classname = "OrderServiceProto";

// Service = set of RPCs (like a Java interface)
service OrderService {
  rpc createOrder (CreateOrderRequest) returns (CreateOrderReply);
}

// Request/Reply messages (binary-efficient; field numbers are part of the wire format)
message CreateOrderRequest {
  int64 restaurant_id = 1;  // snake_case in proto; getRestaurantId() in Java
  int64 consumer_id = 2;
  repeated LineItem line_items = 3;  // "repeated" = List
}

message LineItem {
  string menu_item_id = 1;
  int32 quantity = 2;
}

message CreateOrderReply {
  int64 order_id = 1;
}
